--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <div class="wrapper">
        <div class="header__wrapper">
            <div class="header__logo">
-               <a href="/" class="header__logo-link">
+               <a href="https://www.japan.go.jp/" class="header__logo-link">
                    <img src="./img/svg/odigo-logo.svg" alt="Discover Amazing places in Japan" class="header__logo-pic">
                </a>
            </div>
            <nav class="header__nav">
                <ul class="header__list">
                    <li class="header__item">
-                       <a href="#!" class="header__link">Articles</a>
+                       <a href="https://www.britannica.com/place/Japan" class="header__link">Articles</a>
                    </li>
                    <li class="header__item">
-                       <a href="#!" class="header__link">Locations</a>
+                       <a href="https://www.hostelworld.com/blog/best-places-to-visit-in-japan/" class="header__link">Locations</a>
                    </li>
                    <li class="header__item">
-                       <a href="#!" class="header__link">Videos</a>
+                       <a href="https://www.youtube.com/c/AbroadinJapan/videos" class="header__link">Videos</a>
                    </li>
                    <li class="header__item">
                        <a href="#!" class="header__link">Sign in</a>
@@ -81,7 +81,7 @@
                     <p class="benefits__card-desc">
                         Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
                     </p>
-                    <a href="#!" class="benefits__card-more">
+                    <a href="https://www.tokyocreative.com/" class="benefits__card-more">
                         LEARN MORE
                     </a>
                 </div>
@@ -95,7 +95,7 @@
                     <p class="benefits__card-desc">
                         Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
                     </p>
-                    <a href="#!" class="benefits__card-more">
+                    <a href="https://www.japan-guide.com/" class="benefits__card-more">
                         LEARN MORE
                     </a>
                 </div>
@@ -109,7 +109,7 @@
                     <p class="benefits__card-desc">
                         Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
                     </p>
-                    <a href="#!" class="benefits__card-more">
+                    <a href="https://savvytokyo.com/5-ways-to-help-small-businesses-in-japan/" class="benefits__card-more">
                         LEARN MORE
                     </a>
                 </div>
@@ -125,7 +125,7 @@
                 <h2 class="places__title section-title">
                     Get inspired for your next trip
                 </h2>
-                <a href="#!" class="places__view-all">VIEW ALL</a>
+                <a href="https://livejapan.com/en/article-a0001601/" class="places__view-all">VIEW ALL</a>
             </div>
 
             <div class="places__cards">
@@ -134,7 +134,7 @@
                     <figcaption class="places__card-title" >
                         Mount Fuji
                     </figcaption>
-                    <a href="#!" class="places__card-link"></a>
+                    <a href="https://en.wikipedia.org/wiki/Mount_Fuji" class="places__card-link"></a>
                 </figure>
 
                   <figure class="places__card places__card_size_lg">
@@ -142,14 +142,14 @@
                       <figcaption class="places__card-title" >
                         Kyoto
                       </figcaption>
-                      <a href="#!" class="places__card-link"></a>
+                      <a href="https://en.wikipedia.org/wiki/Kyoto" class="places__card-link"></a>
                     </figure>
                 <figure class="places__card places__card_size_sm">
                     <img src="./img/place-3.jpg" alt="Tokyo" class="places__card-pic places__card-pic_size_sm">
                     <figcaption class="places__card-title" >
                         Tokyo
                     </figcaption>
-                    <a href="#!" class="places__card-link"></a>
+                    <a href="https://en.wikipedia.org/wiki/Tokyo" class="places__card-link"></a>
                 </figure>
 
                 <figure class="places__card places__card_size_sm">
@@ -157,7 +157,7 @@
                     <figcaption class="places__card-title" >
                         Niigata
                     </figcaption>
-                    <a href="#!" class="places__card-link"></a>
+                    <a href="https://en.wikipedia.org/wiki/Niigata_(city)" class="places__card-link"></a>
                 </figure>
 
                 <figure class="places__card places__card_size_sm">
@@ -165,12 +165,280 @@
                     <figcaption class="places__card-title" >
                         Sapporo
                     </figcaption>
-                    <a href="#!" class="places__card-link"></a>
+                    <a href="https://en.wikipedia.org/wiki/Sapporo" class="places__card-link"></a>
                 </figure>
             </div>
         </div>
     </section>
     <!--   Places end  -->
+
+    <!-- Tours   start  -->
+    <div class="tours">
+        <div class="wrapper-full">
+            <div class="tours__tour tour">
+                <div class="tour__pic">
+                    <img src="./img/tour1.jpg" alt="Prefecture in Focus: Tottori" class="tour__thumb">
+                </div>
+                <div class="tour__info">
+                    <h3 class="tour_title">
+                        Prefecture in FocusL Tottori
+                    </h3>
+                    <p class="tour__desc">
+                        Jump off balcony, onto stranger's head. Chase ball of string hide when guests
+                        come over. Being gorgeous with belly side up i could pee on this if i had the energy
+                        but under the bed, for attack the child, open the door,
+                    </p>
+                    <a href="https://www3.nhk.or.jp/nhkworld/en/ondemand/playlist/62/" class="tour__more">
+                        VIEW PREFECTURE
+                    </a>
+                </div>
+            </div>
+            <div class="tours__tour tour">
+                <div class="tour__info">
+                    <h3 class="tour_title">
+                        Featured Neighborhood: Kyoto’s Arashiyama
+                    </h3>
+                    <p class="tour__desc">
+                        Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                        Being gorgeous with belly side up i could pee on this if i had the energy but under
+                        the bed, for attack the child, open the door,
+                    </p>
+                    <a href="https://www.insidekyoto.com/arashiyama" class="tour__more">
+                        VIEW NEIGHBORHOOD
+                    </a>
+                </div>
+                    <div class="tour__pic">
+                        <img src="./img/tour2.jpg" alt="Featured Neighborhood: Kyoto’s Arashiyama" class="tour__thumb">
+                    </div>
+            </div>
+        </div>
+    </div>
+    <!--   Tours end  -->
+
+    <!--   Top start  -->
+    <sction class="top">
+        <div class="wrapper-full">
+            <h2 class="top__title section-title">
+                Today top places to visit
+            </h2>
+
+            <div class="top__cards">
+                <div class="top__card">
+                    <div class="top__card-pic">
+                        <img src="./img/top-pic1.jpg" alt="NAGOYA" class="top__card-thumb">
+                        <div class="top__card-stats">
+                            <h3 class="top__card-title">
+                                NAGOYA
+                            </h3>
+                            <div class="top__card-likes">
+                                <span class="top__card-likes-value">221</span>
+                            </div>
+                            <div class="top__card-comments">
+                                <span class="top__card-comments-value">50</span>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="top__card-desc">
+                        Jump off balcony, onto stranger's head. Chase ball of string hide
+                        when guests come over. Being gorgeous with belly side up i could pee on this.
+                    </p>
+                    <a href="https://en.wikipedia.org/wiki/Nagoya" class="top__card-more">SEE MORE</a>
+                </div>
+
+                <div class="top__card">
+                    <div class="top__card-pic">
+                        <img src="./img/top-pic2.jpg" alt="NIIGATA" class="top__card-thumb">
+                        <div class="top__card-stats">
+                            <h3 class="top__card-title">
+                                NIIGATA
+                            </h3>
+                            <div class="top__card-likes">
+                                <span class="top__card-likes-value">221</span>
+                            </div>
+                            <div class="top__card-comments">
+                                <span class="top__card-comments-value">50</span>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="top__card-desc">
+                        Jump off balcony, onto stranger's head. Chase ball of string hide
+                        when guests come over. Being gorgeous with belly side up i could pee on this.
+                    </p>
+                    <a href="https://en.wikipedia.org/wiki/Niigata_(city)" class="top__card-more">SEE MORE</a>
+                </div>
+
+                <div class="top__card">
+                    <div class="top__card-pic">
+                        <img src="./img/top-pic3.jpg" alt="OSAKA" class="top__card-thumb">
+                        <div class="top__card-stats">
+                            <h3 class="top__card-title">
+                                OSAKA
+                            </h3>
+                            <div class="top__card-likes">
+                                <span class="top__card-likes-value">221</span>
+                            </div>
+                            <div class="top__card-comments">
+                                <span class="top__card-comments-value">50</span>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="top__card-desc">
+                        Jump off balcony, onto stranger's head. Chase ball of string hide
+                        when guests come over. Being gorgeous with belly side up i could pee on this.
+                    </p>
+                    <a href="https://en.wikipedia.org/wiki/Osaka" class="top__card-more">SEE MORE</a>
+                </div>
+
+                <div class="top__card">
+                    <div class="top__card-pic">
+                        <img src="./img/top-pic4.jpg" alt="SAITAMA" class="top__card-thumb">
+                        <div class="top__card-stats">
+                            <h3 class="top__card-title">
+                                SAITAMA
+                            </h3>
+                            <div class="top__card-likes">
+                                <span class="top__card-likes-value">221</span>
+                            </div>
+                            <div class="top__card-comments">
+                                <span class="top__card-comments-value">50</span>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="top__card-desc">
+                        Jump off balcony, onto stranger's head. Chase ball of string hide
+                        when guests come over. Being gorgeous with belly side up i could pee on this.
+                    </p>
+                    <a href="https://en.wikipedia.org/wiki/Saitama" class="top__card-more">SEE MORE</a>
+                </div>
+
+                <div class="top__card">
+                    <div class="top__card-pic">
+                        <img src="./img/top-pic5.jpg" alt="UENO" class="top__card-thumb">
+                        <div class="top__card-stats">
+                            <h3 class="top__card-title">
+                                UENO
+                            </h3>
+                            <div class="top__card-likes">
+                                <span class="top__card-likes-value">221</span>
+                            </div>
+                            <div class="top__card-comments">
+                                <span class="top__card-comments-value">50</span>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="top__card-desc">
+                        Jump off balcony, onto stranger's head. Chase ball of string hide
+                        when guests come over. Being gorgeous with belly side up i could pee on this.
+                    </p>
+                    <a href="https://en.wikipedia.org/wiki/Ueno" class="top__card-more">SEE MORE</a>
+                </div>
+
+                <div class="top__card">
+                    <div class="top__card-pic">
+                        <img src="./img/top-pic6.jpg" alt="SHIBUYA" class="top__card-thumb">
+                        <div class="top__card-stats">
+                            <h3 class="top__card-title">
+                                SHIBUYA
+                            </h3>
+                            <div class="top__card-likes">
+                                <span class="top__card-likes-value">221</span>
+                            </div>
+                            <div class="top__card-comments">
+                                <span class="top__card-comments-value">50</span>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="top__card-desc">
+                        Jump off balcony, onto stranger's head. Chase ball of string hide
+                        when guests come over. Being gorgeous with belly side up i could pee on this.
+                    </p>
+                    <a href="https://en.wikipedia.org/wiki/Shibuya" class="top__card-more">SEE MORE</a>
+                </div>
+            </div>
+        </div>
+    </sction>
+    <!--   Top end  -->
+
+    <!--   Video Start  -->
+    <div class="videos">
+        <div class="videos_wrapper">
+            <div class="video__item">
+            <iframe class="video__element" src="https://www.youtube.com/embed/AyPANY59gHI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+    <!--   Videos end  -->
+
+    <!--  Footer Start  -->
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__item">
+                <div class="footer__logo">
+                    <img src="./img/svg/odigo-logo-footer.svg" alt="odigo" class="footer__logo-pic">
+                </div>
+                <nav class="footer__nav">
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item">
+                            <h3 class="footer__menu-title">Company</h3>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://en.wikipedia.org/wiki/Japan" class="footer__menu-link">About</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://teamjapanese.com/" class="footer__menu-link">Team</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://jobsinjapan.com/" class="footer__menu-link">Careers</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://www.jpf.go.jp/e/privacy/" class="footer__menu-link">Privacy Policy</a>
+                        </li>
+                    </ul>
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item">
+                            <h3 class="footer__menu-title">Locations</h3>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://www.google.com/maps/@35.658295,139.745225,3a,75y,142.69h,153.75t/data=!3m8!1e1!3m6!1sAF1QipMD9VQxgsqin8E_y6uXC8QJONcl0ZnJDSQbGoFY!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMD9VQxgsqin8E_y6uXC8QJONcl0ZnJDSQbGoFY%3Dw203-h100-k-no-pi-0-ya211.81857-ro0-fo100!7i5376!8i2688" class="footer__menu-link">Tokyo</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://www.google.com/maps/@34.9878693,135.7767944,3a,75y,100.23h,92.05t/data=!3m8!1e1!3m6!1sAF1QipOskC80Px2Vt9dWzAnSzkkZXrcuMDW33jz8EbiI!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipOskC80Px2Vt9dWzAnSzkkZXrcuMDW33jz8EbiI%3Dw203-h100-k-no-pi-10-ya235-ro0-fo100!7i9728!8i4864" class="footer__menu-link">Kyoto</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://www.google.com/maps/@34.683772,135.5260965,3a,75y,228.76h,74.23t/data=!3m8!1e1!3m6!1sAF1QipNq_NXHyG4m3T_StMhjjd1Q0VNp0hbc1P1Y5-nY!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipNq_NXHyG4m3T_StMhjjd1Q0VNp0hbc1P1Y5-nY%3Dw203-h100-k-no-pi-0-ya113.06672-ro-0-fo100!7i6504!8i3252" class="footer__menu-link">Osaka</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://www.google.com/maps/@43.3010422,142.5257768,3a,75y,274.86h,92.65t/data=!3m8!1e1!3m6!1sAF1QipPOUWvgMhYJGvFtdQUvZisy_C0ac4ZZwvykgxhK!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipPOUWvgMhYJGvFtdQUvZisy_C0ac4ZZwvykgxhK%3Dw203-h100-k-no-pi-0-ya108.580376-ro0-fo100!7i6720!8i3360" class="footer__menu-link">Hokkaido</a>
+                        </li>
+                    </ul>
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item">
+                            <h3 class="footer__menu-title">Social Media</h3>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://www.facebook.com/groups/japanru" class="footer__menu-link">Facebookt</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://twitter.com/japan" class="footer__menu-link">Twitter</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://www.instagram.com/japan_youre_beautiful/" class="footer__menu-link">Instagram</a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a href="https://www.youtube.com/user/steffengerman" class="footer__menu-link">Youtube</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </footer>
+
+    <!--   Footer end  -->
+
+
+
+
 </main>
+    <script src="./js/main.js"></script>
 </body>
 </html>
