--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                             <h3 class="footer__menu-title">Social Media</h3>
                         </li>
                         <li class="footer__menu-item">
-                            <a href="https://www.facebook.com/groups/japanru" class="footer__menu-link">Facebookt</a>
+                            <a href="https://www.facebook.com/groups/japanru" class="footer__menu-link">Facebook</a>
                         </li>
                         <li class="footer__menu-item">
                             <a href="https://twitter.com/japan" class="footer__menu-link">Twitter</a>
